tweak the layout a bit, fix the alignment

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1,10 +1,10 @@
 canvas {
-  border: 1px solid #333;
+  border: 1px solid #999;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
 }
 form {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
-  height: 280px;
+  height: 282px;
 }
